add users recipe to db
