# routes/recipes.js
@@ -108,52 +108,4 @@ router.get("/getRecipe/:recipeId", async (req, res, next) => {
 });
 
 
-/**
- * This path saves this user recipe in the user recipe list of the logged-in user
- */
-router.post('/myrecipes', async (req, res, next) => {
-  try {
-    const user_id = req.session.user_id;
-    const recipeDetails = req.body;
-    await user_utils.addUserRecipe(recipeDetails, user_id);
-    res.status(200).send("The Recipe successfully to user's recipes");
-  } catch (error) {
-    next(error);
-  }
-})
-
-router.get('/myrecipes', async (req, res, next) => {
-  try {
-    const user_id = req.session.user_id;
-    recipes = await user_utils.getUserRecipes(user_id);
-    if (recipes.length == 0){
-      res.sendStatus(404)
-    }
-    else{
-      res.status(200).send(recipes);
-    }
-  } catch (error) {
-    next(error);
-  }
-})
-
-
-/**
- * add new recipe as a logged user
- */
-router.post('/addRecipe', async (req, res, next) => {
-  try {
-    const user_id = req.session.user_id;
-    const recipe = req.body.recipe;
-    recipe.user_id = user_id;
-    
-    // Call the saveRecipe function to save the recipe in the database
-    await recipes_utils.addRecipe(recipe);
-    
-    res.status(200).send("Recipe successfully saved");
-  } catch (error) {
-    next(error);
-  }
-});
-
 module.exports = router;
